--- a/package.json
+++ b/package.json
@@ -7,19 +7,16 @@
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
     "fuse.js": "^3.2.0",
     "geojson-bounds": "^1.0.1",
     "jsdom": "^11.6.2",
-    "jsonfile": "^4.0.0",
     "lodash": "^4.17.5",
-    "object-sizeof": "^1.2.0",
     "twit": "^2.2.9"
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
-  }
+  },
+  "author": "St John Giddy (SAEON)",
+  "license": "MIT"
 }
