--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js | bunyan",
-    "dev": "nodemon app.js | bunyan",
+    "dev": "nodemon app.js --config=config/config.dev.json | bunyan",
     "debug": "node --nolazy --inspect-brk=9229 app.js | bunyan",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
     "bunyan": "^1.8.12",
     "express": "^4.16.3",
     "lodash": "^4.17.5",
+    "minimist": "^1.2.0",
     "twit": "^2.2.9"
   }
 }
