--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "dependencies": {
     "apollo-server-express": "^1.3.4",
     "bunyan": "^1.8.12",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "lodash": "^4.17.5",
-    "minimist": "^1.2.0",
     "twit": "^2.2.9"
   }
 }
