--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bunyan": "^1.8.12",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "feedparser": "^2.2.9",
     "graphql": "^0.13.2",
+    "graphql-request": "^1.5.2",
     "lodash": "^4.17.5",
     "nanomatch": "^1.2.9",
     "twit": "^2.2.9"
