refactor(config): update prod config

--- a/config/config.json
+++ b/config/config.json
@@ -169,7 +169,7 @@
     "Northern Cape",
     "Western Cape"
   ],
-  "localKwords": {
+  "hooks": {
     "hazards": [
       "Fire",
       "Burning",
