--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "feedparser": "^2.2.9",
     "graphql": "^0.13.2",
     "graphql-request": "^1.5.2",
+    "graphql-tools": "^3.0.0",
+    "level": "^3.0.1",
     "lodash": "^4.17.5",
     "nanomatch": "^1.2.9",
     "twit": "^2.2.9"
